--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a:hover {
 }
 
 p {
-    font-family: manrope;
+    font-family: sf pro text;
 }
 
 p a {
@@ -198,9 +198,22 @@ h4 {
 
 }
 
+h10 {
+    font-size: 1.2rem;
+    font-weight: 508;
+}
+
+h11 {
+    font-size: 1rem;
+   
+
+}
 
 
-
+.resumeHeaderGroup {
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+}
 .image {
     justify-content: left;
     align-items: center;
@@ -210,6 +223,10 @@ h4 {
 /* blog section START */
 
 .blogSection {
+    margin-left: 10rem;
+    margin-right: 10rem;
+}
+.resumeSection {
     margin-left: 10rem;
     margin-right: 10rem;
 }
@@ -233,7 +250,7 @@ h4 {
 
 .footerChunk {
     position: absolute;
-    bottom: 0;
+    bottom: 0!important;
     background-color: black;
     color: white;
     margin: 0;
