--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,99 @@ h12 {
 
 }
 
+/* begin Research Insights (row 3) */
+
+
+    
+    
+    .card-title {
+    background-color: #618291;
+    }
+    
+    
+    .workStuff {
+    width: 100%;
+    justify-content: center;
+    }
+    
+    .card {
+        border: .25px solid blackt;
+        border-radius: 0!important;
+    }
+    .researchBlob {
+    height: 28.7rem;
+    background-color: #3B4968!important;
+    color: white;
+    text-align: center;
+    /*
+    padding-right: 2.31rem;
+    padding-left: 2.31rem;
+    */
+
+    }
+    
+    .cardHeader {
+        background-color: #89A9F1;
+        color: white;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        text-align: center;
+        
+    }
+    
+    .card-text {
+    width: 100%;
+    color: white;
+    }
+    
+    h14 {
+        font-size: 1.5rem;
+        font-weight: 400;
+        align-self: center;
+ 
+    }
+    
+    .researchBlob a {
+        color: white!important;
+    }
+
+    .researchBlob a:hover {
+        cursor: pointer;
+    }
+
+    .card-body {
+    width: 100%;
+
+    }
+    
+    .cardLinks {
+        border-bottom: black .25px solid;
+        color: black;
+        background-color: white;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        text-align: left;
+        padding-left: 3rem;
+        padding-right: 3rem;
+
+    }
+    .contArrow {
+        scale: 75%;
+       float: right;
+      padding-top: .35rem;
+    }
+    .cardLinks a {
+        color: black!important;
+    }
+    .icon1 {
+        width: 2.081rem!important;
+        height: 2.08094rem!important;
+        align-self: center!important;
+        padding-bottom: .75rem;
+  
+    }
+    
+
 /* blog section START */
 
 .blogSection {
