--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,9 @@ h12 {
     font-weight: 300;
 }
 
+h20 {
+    font-size: 1rem;
+}
 .resumeHeaderGroup {
     padding-bottom: .5rem;
     padding-top: .5rem;
@@ -381,6 +384,7 @@ h12 {
         padding-bottom: .75rem;
     }
 
+
     .cardHeaderB {
         background-color: #3B4968;
         color: white;
@@ -409,7 +413,13 @@ h12 {
         padding-bottom: .75rem;
   
     }
-
+    .icon1D {
+        width: 1.8rem!important;
+        height: 1.8rem!important;
+        align-self: center!important;
+        padding-bottom: .5rem;
+  
+    }
     /* original title "researchBlob" */
     .researchBlob {
         height: 28.7rem;
@@ -458,10 +468,11 @@ h12 {
         color: white;
         padding-top: 1rem;
         padding-bottom: 1rem;
-        text-align: left;
-        padding-left: 2rem;
+        text-align: center;
+  
         
     }
+
 .cardHeaderC a {
     color: white!important;
 }
@@ -487,6 +498,11 @@ h12 {
         padding-left: 3rem;
         padding-right: 3rem;
 
+
+    }
+
+    .cardLinksB:hover {
+        text-decoration: underline;
     }
     .contArrow {
         scale: 75%;
