--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,6 @@ h9 {
 }
 
 .essayDescr {
-    display: inline-flex;
-    padding: 1.625rem 2.25rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
     position: relative;
 }
 .essayDescrItem {
@@ -330,22 +325,25 @@ h20 {
   
     
     .mainInfo {
-       
         height: 40rem;
+        position: relativve;
     }
     .mainDescr {
         margin-left: 10rem;
         margin-top: 10rem;
-        padding-right: 4rem;
+        
         
     }
+    .imgPlacement {
 
+        position: absolute;
+        top: 6rem!important;
+        right: 1rem;
+    }
     .mainImg {
-        background-color: grey!important;
-        height: 30rem;
-        width: 16rem;
-        margin-bottom: 10rem;
-        margin-top: 10rem;
+        scale: 60%;
+        float: right;
+       
         
     
       }
@@ -406,6 +404,14 @@ h20 {
     .researchBlobHolder {
         postion: relative;
     }
+
+    .researchBlobHolder2 {
+        position: absolute!important;
+        left: 7rem!important;
+        padding-top: 4rem;
+
+        z-index:100;
+    }
     .icon1 {
         width: 2.081rem!important;
         height: 2.08094rem!important;
@@ -445,6 +451,7 @@ h20 {
         color: white!important;
     }
 
+
     .aboutBlob a:hover {
         cursor: pointer;
     }
@@ -473,6 +480,29 @@ h20 {
         
     }
 
+    .cardHeaderD {
+        background-color: #89A9F1;
+        color: white;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+        text-align: center;
+    }
+
+    .cardHeaderD:hover {
+        background-color: #3B4968;
+        color: white;
+       
+    }
+
+    .icon1about {
+        
+        width: 2.081rem!important;
+        height: 2.08094rem!important;
+        align-self: center!important;
+        padding-bottom: .75rem;
+  
+    }
+   
 .cardHeaderC a {
     color: white!important;
 }
